# mcp-server-template-python

./: .env.example  .env.sample  .gitignore  README.md  pyproject.toml
docs/: README.md
examples/: basic_usage.py
src/mcp_server/: __init__.py  cli.py  main.py
src/mcp_server/config/: config.py
src/mcp_server/tools/: utility.py
src/mcp_server/utils/: logging.py
tests/: __init__.py  test_config.py  test_logging.py  test_main.py  test_tools_utility.py
